[package]
name = "typf-render-zeno"
version.workspace = true
authors.workspace = true
edition.workspace = true
description = "Zeno rendering backend for Typf"
repository.workspace = true
license.workspace = true

[[test]]
name = "integration"
path = "tests/integration.rs"

[dependencies]
kurbo = "0.11"
log.workspace = true
read-fonts = "0.36"
skrifa = "0.39"
thiserror.workspace = true
typf-core = { workspace = true }
zeno = "0.3"
