[package]
name = "typf-shape-hb"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
description = "HarfBuzz shaping backend for Typf"
repository.workspace = true

[dependencies]
typf-core = { workspace = true }
harfbuzz_rs = { workspace = true }
log = { workspace = true }
thiserror = { workspace = true }

# Pool management
parking_lot = { workspace = true }

[dev-dependencies]
read-fonts = { workspace = true }