[package]
name = "typf-shape-icu-hb"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "ICU + HarfBuzz shaping backend for TYPF"

[dependencies]
typf-core = { workspace = true }
harfbuzz_rs = { workspace = true }
unicode-normalization = "0.1"
thiserror = { workspace = true }
log = { workspace = true }
parking_lot = { workspace = true }
lru = { workspace = true }

[dev-dependencies]
env_logger = "0.11"
