[package]
name = "typf-shape-icu-hb"
version.workspace = true
authors.workspace = true
edition.workspace = true
description = "ICU + HarfBuzz shaping backend for Typf"
repository.workspace = true
license.workspace = true

[dependencies]
harfbuzz_rs = { workspace = true }
log = { workspace = true }
lru = { workspace = true }
parking_lot = { workspace = true }
thiserror = { workspace = true }
typf-core = { workspace = true }
unicode-normalization = "0.1"

[dev-dependencies]
env_logger = "0.11"
