[package]
name = "typf-shape-none"
version.workspace = true
authors.workspace = true
edition.workspace = true
description = "Minimal passthrough shaper for Typf (simple LTR Latin text)"
repository.workspace = true
license.workspace = true

[dependencies]
typf-core = { workspace = true }
log = { workspace = true }